--- a/index.html
+++ b/index.html
@@ -4,38 +4,119 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
-        .sidebar { height: 100vh; background-color: #f8f9fa; }
-        .sidebar a { padding: 10px; display: block; color: #333; text-decoration: none; }
-        .sidebar a.active, .sidebar a:hover { background-color: #007bff; color: #fff; }
-        .content { margin-left: 250px; padding: 20px; }
+        body {
+            background-color: #f8f9fa;
+        }
+        .sidebar {
+            height: 100vh;
+            background-color: #343a40;
+            color: white;
+        }
+        .sidebar a {
+            color: white;
+            text-decoration: none;
+            padding: 10px 15px;
+            display: block;
+        }
+        .sidebar a:hover {
+            background-color: #495057;
+        }
+        .sidebar .active {
+            background-color: #495057;
+        }
+        .profile-image {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 15px;
+        }
     </style>
 </head>
 <body>
     <div class="d-flex">
         <!-- Sidebar -->
-        <div class="sidebar">
-            <h4 class="text-center py-3">Dashboard</h4>
-            <a href="#" id="menu-user" class="menu-item"><i class="fa fa-users"></i> User</a>
-            <a href="#" id="menu-pelanggan" class="menu-item"><i class="fa fa-user"></i> Pelanggan</a>
-            <a href="#" id="menu-supplier" class="menu-item"><i class="fa fa-truck"></i> Supplier</a>
-            <a href="#" id="menu-kategori" class="menu-item"><i class="fa fa-list"></i> Kategori</a>
-            <a href="#" id="menu-item" class="menu-item"><i class="fa fa-box"></i> Item</a>
-            <a href="#" id="menu-produk" class="menu-item"><i class="fa fa-cube"></i> Produk</a>
-            <a href="#" id="menu-transaksi" class="menu-item"><i class="fa fa-shopping-cart"></i> Transaksi</a>
-            <a href="#" id="menu-laporan" class="menu-item"><i class="fa fa-file"></i> Laporan</a>
-            <a href="#" id="logout" class="menu-item text-danger"><i class="fa fa-sign-out-alt"></i> Logout</a>
+        <div class="sidebar p-3">
+            <h4 class="text-center">Admin Panel</h4>
+            <hr>
+            <a href="#" class="active" id="linkUser"><i class="fa fa-users"></i> User</a>
+            <a href="#" id="linkPelanggan"><i class="fa fa-user"></i> Pelanggan</a>
+            <a href="#" id="linkSupplier"><i class="fa fa-truck"></i> Supplier</a>
+            <a href="#" id="linkKategori"><i class="fa fa-list"></i> Kategori</a>
+            <a href="#" id="linkItem"><i class="fa fa-box"></i> Item</a>
+            <a href="#" id="linkProduk"><i class="fa fa-cube"></i> Produk</a>
+            <a href="#" id="linkTransaksi"><i class="fa fa-shopping-cart"></i> Transaksi</a>
+            <a href="#" id="linkLaporan"><i class="fa fa-file"></i> Laporan</a>
+            <a href="#" id="linkSetting"><i class="fa fa-cogs"></i> Setting</a>
         </div>
 
-        <!-- Content Area -->
-        <div class="content">
-            <div id="main-content"></div>
+        <!-- Content -->
+        <div class="flex-grow-1 p-3">
+            <div class="row mb-3">
+                <!-- Profile Card -->
+                <div class="col-md-4">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="https://via.placeholder.com/100" alt="User Photo" class="profile-image">
+                            <h5 id="profileName">Nama User</h5>
+                            <p id="profileEmail">email@domain.com</p>
+                            <p id="profilePhone">+62 812 3456 7890</p>
+                            <p id="profileAddress">Alamat Lengkap</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Statistik Card -->
+                <div class="col-md-8">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="card text-center">
+                                <div class="card-body">
+                                    <h6>Pelanggan</h6>
+                                    <h4 id="totalPelanggan">0</h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card text-center">
+                                <div class="card-body">
+                                    <h6>Transaksi</h6>
+                                    <h4 id="totalTransaksi">0</h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card text-center">
+                                <div class="card-body">
+                                    <h6>Laporan</h6>
+                                    <h4 id="totalLaporan">0</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Chart -->
+            <div class="card mb-3">
+                <div class="card-body">
+                    <canvas id="dashboardChart"></canvas>
+                </div>
+            </div>
+
+            <!-- Color Picker -->
+            <div class="card">
+                <div class="card-body">
+                    <label for="colorPicker" class="form-label">Ubah Warna Sidebar</label>
+                    <input type="color" id="colorPicker" class="form-control" value="#343a40">
+                </div>
+            </div>
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="js/dashboard.js"></script>
 </body>
 </html>
